# pgame-demo

./: .gitmodules  CMakeLists.txt  Makefile  metadata.json
assets/: grass.xcf
sdk/: CMakeLists.txt
sdk/include/: pax_codecs.h
src/: main.c
